--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
 
   <form id="form" class="form">
-    <h2>Sign Up!</h2>
+    <h2>SIGN UP</h2>
     <div class="form-control">
       <label for="firstname">First Name</label>
       <input type="text" id="firstname" placeholder="Enter firstname" />
